# backend/app/schemas/__init__.py
@@ -3,9 +3,6 @@
 from .rag import (  # noqa: F401
     DocumentIn,
     DocumentOut,
-    ImageOut,
-    ImageQueryResponse,
-    ImageQueryTextRequest,
     QueryRequest,
     QueryResponse,
 )
